# LooRTOS

./: .gitignore  CMakeLists.txt  README.md  implementation_plan.md
arch/: CMakeLists.txt
arch/posix/: port.hpp
docs/architecture/: class_diagram.md  component_diagram.md  sequence_diagram.md  state_machine.md  uml_overview.md
kernel/: CMakeLists.txt
kernel/core/: kernel.cpp  kernel.hpp  scheduler.cpp  scheduler.hpp  task.cpp  task.hpp
scripts/: build.ps1  build.sh
